[package]
name = "rust-rate-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-test = "12.5.1"
dotenv = "0.15.0"
futures-core = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
pin-project = "1.1.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.9"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["trace"] }
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
