[package]
name = "rust-rocket-rate-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
