[package]
name = "rust-web-sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["ws"] }
axum-tungstenite = "0.3.0"
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["serde_derive"] }
tokio = { version = "1.36.0", features = ["tokio-macros", "full"] }
tokio-tungstenite = "0.21.0"
tower-http = {version = "0.5.2", features = ["fs", "trace"]}
